bitfield/tests/04-multiple-of-8bits.stderr
error[E0277]: the trait bound `NotQuiteFourBytes: TotalSizeModEight<0_usize>` is not satisfied
  --> $DIR/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ the trait `TotalSizeModEight<0_usize>` is not implemented for `NotQuiteFourBytes`
   |
  ::: $WORKSPACE/bitfield/src/lib.rs
   |
   |     pub trait TotalSizeIsMultipleOfEightBits: TotalSizeModEight<0> {}
   |                                               -------------------- required by this bound in `TotalSizeIsMultipleOfEightBits`
   |
   = help: the following implementations were found:
             <NotQuiteFourBytes as TotalSizeModEight<7_usize>>
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
